# lanternfish

./: .env_ollama  .env_start_ollama  .gitignore  README.md  design_and_todo.md  pyproject.toml  run_lanternfish.sh  test-google-scholar.ipynb
lanternfish/: __main__.py  common.py  download_papers.py  generate_report.py  google_scholar.py  llm.py  llm_api.py  llm_client.py  pdf_to_markdown.py  prompts.py
