[project]
name = "lanternfish"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "cache-to-disk>=2.0.0",
    "markdown-pdf>=1.7",
    "ollama>=0.4.8",
    "openai>=1.82.0",
    "pix2text>=1.1.3.2",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "scholarly>=1.7.11",
    "thefuzz>=0.22.1",
]
